Log and chess update

--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,13 @@
+- timestamp: 01/29/2023, 13:50:00 PM
+  text: "«Cajón de sastre con 16 ideas para mejorar tu productividad»"
+  link: https://www.ochoenpunto.com/cajon-de-sastre-16-ideas-mejorar-productividad/
+  cat: write
+
+- timestamp: 01/23/2023, 19:00:00 PM
+  text: "OpenAI and Microsoft Extend Partnership"
+  link: https://openai.com/blog/openai-and-microsoft-extend-partnership/
+  cat: tech
+
 - timestamp: 01/21/2023, 16:22:00 PM
   text: "Nuevo artículo en «Ocho en punto» - «Tus datos sincronizados, seguros y en orden»"
   link: https://www.ochoenpunto.com/tus-datos-sincronizados-seguros-y-en-orden/
