--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,18 @@
+- timestamp: 02/19/2023, 20:00:00 PM
+  text: "«La productividad ilustrada»"
+  link: https://www.ochoenpunto.com/la-productividad-ilustrada/
+  cat: write
+
+- timestamp: 02/11/2023, 20:00:00 PM
+  text: "«En busca de la comunicación efectiva: ¿chat o correo electrónico?»"
+  link: https://www.ochoenpunto.com/en-busca-de-la-comunicacion-efectiva-chat-o-correo-electronico/
+  cat: write
+
+- timestamp: 02/05/2023, 20:00:00 PM
+  text: "«Afila bien tus herramientas de productividad»"
+  link: https://www.ochoenpunto.com/afila-bien-tus-herramientas-de-productividad/
+  cat: write
+
 - timestamp: 01/29/2023, 13:50:00 PM
   text: "«Cajón de sastre con 16 ideas para mejorar tu productividad»"
   link: https://www.ochoenpunto.com/cajon-de-sastre-16-ideas-mejorar-productividad/
