--- a/_data/habits.yml
+++ b/_data/habits.yml
@@ -434,6 +434,42 @@
   arb: 9.0
 
 
+- date: 29/01/2023
+  sleep: 8.0
+  riseearly: 08:37
+  read: 0.5
+  chess: 3.0
+  getridof: 0
+  getridof_t: '(0)'
+  declutter: 0.0
+  lang: 0.25
+  walk: 1.0
+  screentime: 2.0
+  gtd: 'yes'
+  write: 0.0
+  clothes: 'yes'
+  journal: 'no'
+  family: 'yes'
+  arb: 0.0
+
+- date: 30/01/2023
+  sleep: 6.25
+  riseearly: 06:07
+  read: 0.5
+  chess: 2.0
+  getridof: 0
+  getridof_t: '(0)'
+  declutter: 0.25
+  lang: 0.0
+  walk: 11.0
+  screentime: 2.5
+  gtd: 'yes'
+  write: 0.0
+  clothes: 'yes'
+  journal: 'yes'
+  family: 'yes'
+  arb: 6.0
+
 # TEMPLATE
 #- date: 04/01/2023
 #  sleep: 5
