--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 23/02/2023, 18:14:00 PM
+  text: "«Pon a dieta tu lista de tareas: 8 recetas muy saludables»"
+  link: https://www.ochoenpunto.com/pon-a-dieta-tu-lista-de-tareas-8-recetas-muy-saludables/
+  cat: write
+
 - timestamp: 02/19/2023, 20:00:00 PM
   text: "«La productividad ilustrada»"
   link: https://www.ochoenpunto.com/la-productividad-ilustrada/
