Por fin viernes

--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 24/02/2023, 14:05:00 AM
+  text: "¡Por fin viernes!"
+  link:
+  cat: personal
+
 - timestamp: 23/02/2023, 18:14:00 PM
   text: "«Pon a dieta tu lista de tareas: 8 recetas muy saludables»"
   link: https://www.ochoenpunto.com/pon-a-dieta-tu-lista-de-tareas-8-recetas-muy-saludables/
