Books and log update

--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 26/02/2023, 18:20:00 PM
+  text: "«Decálogo para una comunicación digital más efectiva»"
+  link: https://www.ochoenpunto.com/decalogo-para-una-comunicacion-digital-mas-efectiva/
+  cat: write
+
 - timestamp: 24/02/2023, 14:05:00 PM
   text: "¡Por fin viernes!"
   link:
