--- a/_data/books.yml
+++ b/_data/books.yml
@@ -1,3 +1,24 @@
+- title: "Céntrate (Deep Work)"
+  author: Cal Newport
+  link: https://amzn.to/3Xeb1iW
+  onpage: 62.0
+  pages: 249.0
+  completed: 2022
+
+- title: Los Austrias. El vuelo del águila
+  author: José Luis Corral
+  link: https://amzn.to/3tHI29E
+  image:
+  description:
+  genre: [novela]
+  completed:
+  onpage: 40.0
+  pages: 400.0
+  synopsis_hide: "26 de noviembre de 1504. La reina Isabel la Católica acaba de morir y ya se empiezan a escuchar las voces de la mayoría de los nobles de Castilla, que reclaman a Juana la Loca como su verdadera reina. Fernando de Aragón intenta llegar hasta donde sea necesario para impedir que su yerno, Felipe el Hermoso, le arrebate el gobierno de las tierras castellanas.
+Entretanto, la casa de Austria, mediante una política de pactos y enlaces matrimoniales, pugna por convertirse en la familia más poderosa de Europa. Todos los países de la cristiandad, papado incluido, se enredan en una serie de luchas por el poder en las que el sexo, la violencia y el crimen se utilizan como armas para conseguir sus fines políticos. En medio de todos esos conflictos, una familia de judíos conversos, los Losantos, luchará por sobrevivir a la Inquisición, aunque para ello tenga que renunciar a sus propias raíces.<br/>Los Austrias. El vuelo del águila es la gran novela de un tiempo y de un imperio que sentó las bases de un mundo nuevo: nuestro mundo."
+  cover: "elvuelodelaguila.jpeg"
+
+
 - title: Clarissa
   author: Stefan Zweig
   link: https://amzn.to/3TPmaUz
@@ -20,19 +41,6 @@
   synopsis: "¿Quién escribió las obras de Shakespeare? ¿Qué libro perseguía el KGB? ¿Qué novela ocultó Hitler? ¿Quién pensó en el orden alfabético para organizar los libros? ¿Qué autor burló al índice de libros prohibidos de la Inquisición? Estos y otros enigmas literarios encuentran respuesta en las páginas de La noche en que Frankenstein leyó el Quijote, un viaje en el tiempo por la historia de la literatura universal de la mano de Santiago Posteguillo, uno de los novelistas históricos más reconocidos por la crítica y el público de los últimos años. Y un profesor de literatura… poco convencional."
   cover: "frankensteinquijote.jpeg"
 
-
-- title: Los Austrias. El vuelo del águila
-  author: José Luis Corral
-  link: https://amzn.to/3tHI29E
-  image:
-  description:
-  genre: [novela]
-  completed: 'reading'
-  onpage: 40.0
-  pages: 400.0
-  synopsis_hide: "26 de noviembre de 1504. La reina Isabel la Católica acaba de morir y ya se empiezan a escuchar las voces de la mayoría de los nobles de Castilla, que reclaman a Juana la Loca como su verdadera reina. Fernando de Aragón intenta llegar hasta donde sea necesario para impedir que su yerno, Felipe el Hermoso, le arrebate el gobierno de las tierras castellanas.
-Entretanto, la casa de Austria, mediante una política de pactos y enlaces matrimoniales, pugna por convertirse en la familia más poderosa de Europa. Todos los países de la cristiandad, papado incluido, se enredan en una serie de luchas por el poder en las que el sexo, la violencia y el crimen se utilizan como armas para conseguir sus fines políticos. En medio de todos esos conflictos, una familia de judíos conversos, los Losantos, luchará por sobrevivir a la Inquisición, aunque para ello tenga que renunciar a sus propias raíces.<br/>Los Austrias. El vuelo del águila es la gran novela de un tiempo y de un imperio que sentó las bases de un mundo nuevo: nuestro mundo."
-  cover: "elvuelodelaguila.jpeg"
 
 - title: Línea de fuego
   author: Arturo Pérez-Reverte
@@ -93,13 +101,6 @@ En busca del origen del lenguaje es el libro definitivo para entender cómo se o
   image:
   description:
   genre: [historia]
-  completed: 2022
-
-- title: "Céntrate (Deep Work)"
-  author: Cal Newport
-  link: https://amzn.to/3Xeb1iW
-  onpage: 40.0
-  pages: 249.0
   completed: 2022
 
 - title: "La Edad Media. Una historia gráfica"
