--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 27/02/2023, 07:30:00 AM
+  text: "¡Buenos y fríos días! 5ºC y sensación térmica de 0ºC ..."
+  link: https://twitter.com/enriquebenimeli/status/1630099202784075777
+  cat: personal
+
 - timestamp: 26/02/2023, 18:20:00 PM
   text: "«Decálogo para una comunicación digital más efectiva»"
   link: https://www.ochoenpunto.com/decalogo-para-una-comunicacion-digital-mas-efectiva/
