--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 04/03/2023, 20:31:00 PM
+  text: "«Un asistente para redactar informes sobre el rendimiento académico»"
+  link: https://www.esferatic.com/2023/03/asistente-redactar-informes-rendimiento-academico/
+  cat: write
+
 - timestamp: 27/02/2023, 07:30:00 AM
   text: "¡Buenos y fríos días! 5ºC y sensación térmica de 0ºC ..."
   link: https://twitter.com/enriquebenimeli/status/1630099202784075777
