--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 05/04/2023, 08:00:00 AM
+  text: "What’s New in Microsoft EDU webinar - April 2023"
+  link: https://techcommunity.microsoft.com/t5/education-blog/what-s-new-in-microsoft-edu-webinar-april-2023/ba-p/3779237
+  cat: personal
+
 - timestamp: 04/03/2023, 20:31:00 PM
   text: "«Un asistente para redactar informes sobre el rendimiento académico»"
   link: https://www.esferatic.com/2023/03/asistente-redactar-informes-rendimiento-academico/
