Reading Terra Alta by Javier Cercas

--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 09/04/2023, 09:26:00 AM
+  text: "Leyendo «Terra Alta» de Javier Cercas"
+  link: https://www.ebenimeli.org/pages/bookshelf.html
+  cat: reading
+
 - timestamp: 05/04/2023, 08:00:00 AM
   text: "What’s New in Microsoft EDU webinar - April 2023"
   link: https://techcommunity.microsoft.com/t5/education-blog/what-s-new-in-microsoft-edu-webinar-april-2023/ba-p/3779237
