--- a/_data/books.yml
+++ b/_data/books.yml
@@ -1,9 +1,23 @@
+- title: Terra alta
+  author: Javier Cercas
+  link: https://amzn.to/3zJIpDK
+  image:
+  description: 
+  genre: [novela]
+  completed: 
+  onpage: 65.0
+  pages: 384.0
+  synopsis: "Un crimen terrible sacude la apacible comarca de la Terra Alta: los propietarios de su mayor empresa, Gráficas Adell, aparecen asesinados tras haber sido sometidos a atroces torturas.
+  Se encarga del caso Melchor Marín, un joven policía y lector voraz llegado desde Barcelona cuatro años atrás, con un oscuro pasado a cuestas que le ha convertido en una leyenda del cuerpo y que cree haber enterrado bajo su vida feliz como marido de la bibliotecaria del pueblo y padre de una niña llamada Cosette, igual que la hija de Jean Valjean, el protagonista de su novela favorita: Los miserables.
+  Partiendo de ese suceso, y a través de una narración trepidante y repleta de personajes memorables, esta novela se convierte en una lúcida reflexión sobre el valor de la ley, la posibilidad de la justicia y la legitimidad de la venganza, pero sobre todo en la epopeya de un hombre en busca de su lugar en el mundo."
+  cover: "terraalta.jpeg"
+
 - title: "Céntrate (Deep Work)"
   author: Cal Newport
   link: https://amzn.to/3Xeb1iW
   onpage: 62.0
   pages: 249.0
-  completed: 2022
+  completed: 'pause'
 
 - title: Los Austrias. El vuelo del águila
   author: José Luis Corral
@@ -11,7 +25,7 @@
   image:
   description:
   genre: [novela]
-  completed:
+  completed: 'pause'
   onpage: 40.0
   pages: 400.0
   synopsis_hide: "26 de noviembre de 1504. La reina Isabel la Católica acaba de morir y ya se empiezan a escuchar las voces de la mayoría de los nobles de Castilla, que reclaman a Juana la Loca como su verdadera reina. Fernando de Aragón intenta llegar hasta donde sea necesario para impedir que su yerno, Felipe el Hermoso, le arrebate el gobierno de las tierras castellanas.
@@ -36,8 +50,8 @@ Entretanto, la casa de Austria, mediante una política de pactos y enlaces matri
   image:
   description:
   genre: [novela]
-  completed: 'next'
-  progress: '5%'
+  completed: '2023'
+  progress: '100%'
   synopsis: "¿Quién escribió las obras de Shakespeare? ¿Qué libro perseguía el KGB? ¿Qué novela ocultó Hitler? ¿Quién pensó en el orden alfabético para organizar los libros? ¿Qué autor burló al índice de libros prohibidos de la Inquisición? Estos y otros enigmas literarios encuentran respuesta en las páginas de La noche en que Frankenstein leyó el Quijote, un viaje en el tiempo por la historia de la literatura universal de la mano de Santiago Posteguillo, uno de los novelistas históricos más reconocidos por la crítica y el público de los últimos años. Y un profesor de literatura… poco convencional."
   cover: "frankensteinquijote.jpeg"
 
