--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,13 @@
+- timestamp: 10/04/2023, 10:07:00 AM
+  text: "La Basílica de San Pedro explicada"
+  link: https://www.youtube.com/watch?v=FFDFpG2Zqts
+  cat: watch
+
+- timestamp: 09/04/2023, 10:23:00 AM
+  text: "Ya tengo acceso a Microsoft Designer. Integra DALL·E 2. Probemos."
+  link: https://designer.microsoft.com/
+  cat: tech
+
 - timestamp: 09/04/2023, 09:26:00 AM
   text: "Leyendo «Terra Alta» de Javier Cercas"
   link: https://www.ebenimeli.org/pages/bookshelf.html
