--- a/_data/todo.yml
+++ b/_data/todo.yml
@@ -1,3 +1,9 @@
+- title: Inbox
+  done: 0
+  todo: 192
+  tasks: 192
+  time: 0
+
 - title: Hoy
   done: 4
   todo: 1
@@ -6,9 +12,9 @@
 
 - title: Siguientes
   done: 1
-  todo: 168
-  tasks: 169
-  time: 95
+  todo: 165
+  tasks: 166
+  time: 135
 
 - title: Tal vez/algún día
   done: 1
