--- a/_data/books.yml
+++ b/_data/books.yml
@@ -5,12 +5,25 @@
   description: 
   genre: [novela]
   completed: 
-  onpage: 65.0
+  onpage: 101.0
   pages: 384.0
   synopsis: "Un crimen terrible sacude la apacible comarca de la Terra Alta: los propietarios de su mayor empresa, Gráficas Adell, aparecen asesinados tras haber sido sometidos a atroces torturas.
   Se encarga del caso Melchor Marín, un joven policía y lector voraz llegado desde Barcelona cuatro años atrás, con un oscuro pasado a cuestas que le ha convertido en una leyenda del cuerpo y que cree haber enterrado bajo su vida feliz como marido de la bibliotecaria del pueblo y padre de una niña llamada Cosette, igual que la hija de Jean Valjean, el protagonista de su novela favorita: Los miserables.
   Partiendo de ese suceso, y a través de una narración trepidante y repleta de personajes memorables, esta novela se convierte en una lúcida reflexión sobre el valor de la ley, la posibilidad de la justicia y la legitimidad de la venganza, pero sobre todo en la epopeya de un hombre en busca de su lugar en el mundo."
   cover: "terraalta.jpeg"
+
+- title: Imperios y espadazos. Una historia de la Antigüedad para no aburrir(te)
+  author: Andoni Garrido Fernández
+  link: https://amzn.to/3zifsxC
+  image:
+  description:
+  genre: [historia]
+  completed: 
+  onpage: 32.0
+  pages: 498.0
+  synopsis: "Basado en el canal de Youtube Pero esto es otra historia.
+¿Es aburrida la Historia? Eso depende de quién te la cuente. Con este libro te lo pasarás de lujo leyendo y adentrándote en la fascinante Antigüedad. Los hechos más importantes de este periodo reunidos en un único volumen lleno de curiosidades y anécdotas, y relatados en orden cronológico para que no te pierdas. Descubre a través de esta divertida lectura los misterios que esconden temas como el origen de la vida en la Tierra en el remoto mundo prehistórico, la fundación de la primera gran civilización en Sumeria, la construcción de las enormes pirámides del Antiguo Egipto, el colapso del Bronce por los Pueblos del Mar, el desarrollo de la democracia griega o la expansión de Roma por todo el Mediterráneo hasta la llegada de los temibles bárbaros germánicos."
+  cover: "imperiosyespadazos.jpeg"
 
 - title: "Céntrate (Deep Work)"
   author: Cal Newport
@@ -104,14 +117,6 @@ En busca del origen del lenguaje es el libro definitivo para entender cómo se o
 - title: Antiguo Egipto. Introducción a su historia y cultura
   author: Salima Ikram
   link: https://amzn.to/3qFKv2M
-  image:
-  description:
-  genre: [historia]
-  completed: 2022
-
-- title: Imperios y espadazos. Una historia de la Antigüedad para no aburrir(te)
-  author: Andoni Garrido Fernández
-  link: https://amzn.to/3zifsxC
   image:
   description:
   genre: [historia]
