Log update | Reading

--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 11/04/2023, 07:42:00 AM
+  text: "Leyendo «Imperios y espadazos» de Andoni Garrido Fernández"
+  link: https://www.ebenimeli.org/pages/bookshelf.html
+  cat: read
+
 - timestamp: 10/04/2023, 10:07:00 AM
   text: "La Basílica de San Pedro explicada"
   link: https://www.youtube.com/watch?v=FFDFpG2Zqts
@@ -11,7 +16,7 @@
 - timestamp: 09/04/2023, 09:26:00 AM
   text: "Leyendo «Terra Alta» de Javier Cercas"
   link: https://www.ebenimeli.org/pages/bookshelf.html
-  cat: reading
+  cat: read
 
 - timestamp: 05/04/2023, 08:00:00 AM
   text: "What’s New in Microsoft EDU webinar - April 2023"
