--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 11/04/2023, 09:07:00 AM
+  text: "Quizá la clave de la organización es utilizar un sistema tan simple como este: «My productivity app is a never-ending .txt file»"
+  link: https://jeffhuang.com/productivity_text_file/
+  cat: read
+
 - timestamp: 11/04/2023, 07:42:00 AM
   text: "Leyendo «Imperios y espadazos» de Andoni Garrido Fernández"
   link: https://www.ebenimeli.org/pages/bookshelf.html
