Link style | Log updated

--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 15/04/2023, 14:03:00 PM
+  text: "«Un juego de palabras: Shuffled!»"
+  link: https://www.esferatic.com/2023/04/shuffled/
+  cat: write
+
 - timestamp: 11/04/2023, 09:07:00 AM
   text: "Quizá la clave de la organización es utilizar un sistema tan simple como este: «My productivity app is a never-ending .txt file»"
   link: https://jeffhuang.com/productivity_text_file/
