Log updated (new post)

--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,9 @@
+- timestamp: 16/04/2023, 18:11:00 PM
+  text: "En ocasiones, la clave para ganarle unos minutos al día es muy sencilla: escribir mejor y más rápido con el teclado o, simplemente, ser menos estrictos y perfeccionistas. Acabo de publicar en «Ocho en punto» el artículo «Cómo ahorrar tiempo (III): menos perfeccionismo y más velocidad»"
+  link: https://www.ochoenpunto.com/ahorrar-tiempo-velocidad-perfeccionismo/
+  cat: write
+
+
 - timestamp: 15/04/2023, 14:03:00 PM
   text: "«Un juego de palabras: Shuffled!»"
   link: https://www.esferatic.com/2023/04/shuffled/
