Update log: ranking Optima LAB

--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,8 +1,12 @@
+- timestamp: 17/04/2023, 06:54:00 PM
+  text: "Ranking OPTIMA LAB de blogs de efectividad. segundo trimestre 2023."
+  link: https://efectivitat.com/ranking-optima-lab-de-blogs-de-efectividad
+  cat: productivity
+
 - timestamp: 16/04/2023, 18:11:00 PM
   text: "En ocasiones, la clave para ganarle unos minutos al día es muy sencilla: escribir mejor y más rápido con el teclado o, simplemente, ser menos estrictos y perfeccionistas. Acabo de publicar en «Ocho en punto» el artículo «Cómo ahorrar tiempo (III): menos perfeccionismo y más velocidad»"
   link: https://www.ochoenpunto.com/ahorrar-tiempo-velocidad-perfeccionismo/
   cat: write
-
 
 - timestamp: 15/04/2023, 14:03:00 PM
   text: "«Un juego de palabras: Shuffled!»"
