--- a/_data/today.yml
+++ b/_data/today.yml
@@ -1,2 +1,3 @@
-- title: Preparar borrador del próximo artículo de «Ocho en punto»    
+- title: + Preparar algunas ideas para el artículo n.º 150 de «Ocho en punto»    
+- title: Revisar a fondo mi lista de tareas      
 - title: Buscar modelos de repetidor WiFI    
