Log updated: Shuffled Libro

--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 19/04/2023, 19:19:00 PM
+  text: "El «Día del Libro»" está cerca... ¿Cuánto sabes sobre el libro? ¡Ponte a prueba con este juego!
+  link: https://www.esferatic.com/shuffled/?topic=libro
+  cat: education
+
 - timestamp: 17/04/2023, 06:54:00 PM
   text: "Ranking OPTIMA LAB de blogs de efectividad. segundo trimestre 2023."
   link: https://efectivitat.com/ranking-optima-lab-de-blogs-de-efectividad
