--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,5 +1,5 @@
 - timestamp: 19/04/2023, 19:19:00 PM
-  text: "El «Día del Libro»" está cerca... ¿Cuánto sabes sobre el libro? ¡Ponte a prueba con este juego!
+  text: "El «Día del Libro» está cerca... ¿Cuánto sabes sobre el libro? ¡Ponte a prueba con este juego!"
   link: https://www.esferatic.com/shuffled/?topic=libro
   cat: education
 
