--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 29/04/2023, 11:38:00 AM
+  text: "«https://www.ochoenpunto.com/tercer-alto-camino-150-articulos-organizacion-personal/»"
+  link: https://www.ochoenpunto.com/tercer-alto-camino-150-articulos-organizacion-personal/
+  cat: write
+
 - timestamp: 19/04/2023, 19:19:00 PM
   text: "El «Día del Libro» está cerca... ¿Cuánto sabes sobre el libro? ¡Ponte a prueba con este juego!"
   link: https://www.esferatic.com/shuffled/?topic=libro
