--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,5 +1,5 @@
 - timestamp: 29/04/2023, 11:38:00 AM
-  text: "«https://www.ochoenpunto.com/tercer-alto-camino-150-articulos-organizacion-personal/»"
+  text: "«Un tercer alto en el camino: 150 artículos sobre organización personal»"
   link: https://www.ochoenpunto.com/tercer-alto-camino-150-articulos-organizacion-personal/
   cat: write
 
