--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 30/04/2023, 09:30:00 AM
+  text: "Un directo de Marc Vidal con Chema Alonso hablando de Inteligencia Artificial"
+  link: https://www.youtube.com/watch?v=oAxRiPiBLek
+  cat: watch
+
 - timestamp: 29/04/2023, 11:38:00 AM
   text: "«Un tercer alto en el camino: 150 artículos sobre organización personal»"
   link: https://www.ochoenpunto.com/tercer-alto-camino-150-articulos-organizacion-personal/
