--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 06/05/2023, 14:00:00 PM
+  text: "Terminé de leer «Terra Alta» de Javier Cercas. Una novela emocionante con una trama muy bien construida que entretiene e invita a la reflexión."
+  link: https://amzn.to/3zJIpDK
+  cat: read
+
 - timestamp: 30/04/2023, 09:30:00 AM
   text: "Un directo de Marc Vidal con Chema Alonso hablando de Inteligencia Artificial"
   link: https://www.youtube.com/watch?v=oAxRiPiBLek
