--- a/_data/books.yml
+++ b/_data/books.yml
@@ -1,3 +1,33 @@
+- title: Terra alta
+  author: Javier Cercas
+  link: https://amzn.to/3zJIpDK
+  image:
+  description: 
+  genre: [novela]
+  completed: 2023
+  onpage: 384
+  pages: 384
+  synopsis: "Un crimen terrible sacude la apacible comarca de la Terra Alta: los propietarios de su mayor empresa, Gráficas Adell, aparecen asesinados tras haber sido sometidos a atroces torturas.
+  Se encarga del caso Melchor Marín, un joven policía y lector voraz llegado desde Barcelona cuatro años atrás, con un oscuro pasado a cuestas que le ha convertido en una leyenda del cuerpo y que cree haber enterrado bajo su vida feliz como marido de la bibliotecaria del pueblo y padre de una niña llamada Cosette, igual que la hija de Jean Valjean, el protagonista de su novela favorita: Los miserables.
+  Partiendo de ese suceso, y a través de una narración trepidante y repleta de personajes memorables, esta novela se convierte en una lúcida reflexión sobre el valor de la ley, la posibilidad de la justicia y la legitimidad de la venganza, pero sobre todo en la epopeya de un hombre en busca de su lugar en el mundo."
+  cover: "terraalta.jpeg"
+  highlight: "yes"
+  rating: 4
+
+- title: Los Austrias. El vuelo del águila
+  author: José Luis Corral
+  link: https://amzn.to/3tHI29E
+  image:
+  description:
+  genre: [novela]
+  completed: 2023
+  onpage: 98
+  pages: 756
+  synopsis: "26 de noviembre de 1504. La reina Isabel la Católica acaba de morir y ya se empiezan a escuchar las voces de la mayoría de los nobles de Castilla, que reclaman a Juana la Loca como su verdadera reina. Fernando de Aragón intenta llegar hasta donde sea necesario para impedir que su yerno, Felipe el Hermoso, le arrebate el gobierno de las tierras castellanas.
+Entretanto, la casa de Austria, mediante una política de pactos y enlaces matrimoniales, pugna por convertirse en la familia más poderosa de Europa. Todos los países de la cristiandad, papado incluido, se enredan en una serie de luchas por el poder en las que el sexo, la violencia y el crimen se utilizan como armas para conseguir sus fines políticos. En medio de todos esos conflictos, una familia de judíos conversos, los Losantos, luchará por sobrevivir a la Inquisición, aunque para ello tenga que renunciar a sus propias raíces.<br/>Los Austrias. El vuelo del águila es la gran novela de un tiempo y de un imperio que sentó las bases de un mundo nuevo: nuestro mundo."
+  cover: "elvuelodelaguila.jpeg"
+  highlight: "yes"
+  
 - title: Imperios y espadazos. Una historia de la Antigüedad para no aburrir(te)
   author: Andoni Garrido Fernández
   link: https://amzn.to/3zifsxC
@@ -53,20 +83,6 @@ En busca del origen del lenguaje es el libro definitivo para entender cómo se o
   onpage: 39.0
   pages: 181.0
 
-- title: Los Austrias. El vuelo del águila
-  author: José Luis Corral
-  link: https://amzn.to/3tHI29E
-  image:
-  description:
-  genre: [novela]
-  completed: 'pause'
-  onpage: 40.0
-  pages: 400.0
-  synopsis_hide: "26 de noviembre de 1504. La reina Isabel la Católica acaba de morir y ya se empiezan a escuchar las voces de la mayoría de los nobles de Castilla, que reclaman a Juana la Loca como su verdadera reina. Fernando de Aragón intenta llegar hasta donde sea necesario para impedir que su yerno, Felipe el Hermoso, le arrebate el gobierno de las tierras castellanas.
-Entretanto, la casa de Austria, mediante una política de pactos y enlaces matrimoniales, pugna por convertirse en la familia más poderosa de Europa. Todos los países de la cristiandad, papado incluido, se enredan en una serie de luchas por el poder en las que el sexo, la violencia y el crimen se utilizan como armas para conseguir sus fines políticos. En medio de todos esos conflictos, una familia de judíos conversos, los Losantos, luchará por sobrevivir a la Inquisición, aunque para ello tenga que renunciar a sus propias raíces.<br/>Los Austrias. El vuelo del águila es la gran novela de un tiempo y de un imperio que sentó las bases de un mundo nuevo: nuestro mundo."
-  cover: "elvuelodelaguila.jpeg"
-
-
 - title: Clarissa
   author: Stefan Zweig
   link: https://amzn.to/3TPmaUz
@@ -78,22 +94,6 @@ Entretanto, la casa de Austria, mediante una política de pactos y enlaces matri
   synopsis: "Clarissa, hija de un militar austríaco, conoce en Lucerna a Léonard, un joven socialista francés del que se enamora. El estallido de la Gran Guerra separa a los amantes y la joven, que ha quedado embarazada, debe volver a Austria en medio de una Europa que se desgarra, donde toma la decisión de tener y criar a un hijo del enemigo. Esta conmovedora novela tardía de Zweig es hoy considerada el testamento en el que el extraordinario escritor austríaco condensó los ideales humanísticos que abrazó durante toda su vida."
   cover: "clarissa.jpeg"
 
-- title: Terra alta
-  author: Javier Cercas
-  link: https://amzn.to/3zJIpDK
-  image:
-  description: 
-  genre: [novela]
-  completed: 2023
-  onpage: 384
-  pages: 384
-  synopsis: "Un crimen terrible sacude la apacible comarca de la Terra Alta: los propietarios de su mayor empresa, Gráficas Adell, aparecen asesinados tras haber sido sometidos a atroces torturas.
-  Se encarga del caso Melchor Marín, un joven policía y lector voraz llegado desde Barcelona cuatro años atrás, con un oscuro pasado a cuestas que le ha convertido en una leyenda del cuerpo y que cree haber enterrado bajo su vida feliz como marido de la bibliotecaria del pueblo y padre de una niña llamada Cosette, igual que la hija de Jean Valjean, el protagonista de su novela favorita: Los miserables.
-  Partiendo de ese suceso, y a través de una narración trepidante y repleta de personajes memorables, esta novela se convierte en una lúcida reflexión sobre el valor de la ley, la posibilidad de la justicia y la legitimidad de la venganza, pero sobre todo en la epopeya de un hombre en busca de su lugar en el mundo."
-  cover: "terraalta.jpeg"
-  highlight: "yes"
-  rating: 4
-  
 - title: La noche en que Frankenstein leyó el Quijote. La vida secreta de los libros.
   author: Santiago Posteguillo
   link: https://amzn.to/3EKMESJ
