--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 07/05/2023, 14:00:00 PM
+  text: "«La fundación de Nueva York por los holandeses» del podcast Curiosidades de la Historia (National Geographic)"
+  link: https://podcasts.apple.com/es/podcast/curiosidades-de-la-historia-national-geographic/id1472737419?i=1000611860644
+  cat: podcast
+
 - timestamp: 06/05/2023, 14:00:00 PM
   text: "Terminé de leer «Terra Alta» de Javier Cercas. Una novela emocionante con una trama muy bien construida que entretiene e invita a la reflexión."
   link: https://amzn.to/3zJIpDK
