--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 12/05/2023, 20:53:00 PM
+  text: "Jesús Quintero entrevista a Arturo Pérez-Reverte (21 de febrero de 2006)"
+  link: https://youtu.be/OUPj_nC7lf0
+  cat: watch
+
 - timestamp: 07/05/2023, 14:00:00 PM
   text: "«La fundación de Nueva York por los holandeses» del podcast Curiosidades de la Historia (National Geographic)"
   link: https://podcasts.apple.com/es/podcast/curiosidades-de-la-historia-national-geographic/id1472737419?i=1000611860644
