--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 15/05/2023, 19:55:00 PM
+  text: "«Hipatia, la primera científica» de SER Historia: Hipatia de Alejandría fue la primera científica de la Historia. Hubo muchas más antes que ella, pero ella es la primera en guardar este galardón, y seguro que se lo mereció. Jesús Callejo nos transporta en su cronovisor a la Alejandría del siglo IV para conocerla."
+  link: https://podcasts.apple.com/es/podcast/ser-historia/id356329864?i=1000612921655
+  cat: podcast
+
 - timestamp: 12/05/2023, 20:53:00 PM
   text: "Jesús Quintero entrevista a Arturo Pérez-Reverte (21 de febrero de 2006)"
   link: https://youtu.be/OUPj_nC7lf0
