Actualizar log.yml
Miércoles intenso

--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 17/05/2023, 22:28:00 PM
+  text: "Miércoles intenso"
+  link: https://twitter.com/enriquebenimeli/status/1658913776391921666?s=46
+  cat: thought
+
 - timestamp: 15/05/2023, 19:55:00 PM
   text: "«Hipatia, la primera científica» de SER Historia: Hipatia de Alejandría fue la primera científica de la Historia. Hubo muchas más antes que ella, pero ella es la primera en guardar este galardón, y seguro que se lo mereció. Jesús Callejo nos transporta en su cronovisor a la Alejandría del siglo IV para conocerla."
   link: https://podcasts.apple.com/es/podcast/ser-historia/id356329864?i=1000612921655
