--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 20/05/2023, 18:33:00 AM
+  text: "Con este artículo, empiezo la serie de buenas prácticas para una comunicación digital más efectiva. En este decálogo trataré el exceso o la falta de comunicación, los canales inadecuados, las prioridades equivocadas, la duplicidad de la información o los tiempos incorrectos. Este último parece un buen punto de partida: «Cuando la hora importa»"
+  link: https://www.patreon.com/posts/cuando-la-hora-83290801
+  cat: write
+
 - timestamp: 17/05/2023, 22:28:00 PM
   text: "Miércoles intenso"
   link: https://twitter.com/enriquebenimeli/status/1658913776391921666?s=46
