--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,8 +1,7 @@
-- timestamp: 
+- timestamp: 2023-05-22 07:45
   text: "☔️ Feliz lunes pasado por agua"
   link: http://www.ebenimeli.org/pages/log.html
-  cat: status
-  #priority: 'urgent'
+  cat: 'status'
 
 - timestamp: 20/05/2023, 18:33:00 AM
   text: "Con este artículo, empiezo la serie de buenas prácticas para una comunicación digital más efectiva. En este decálogo trataré el exceso o la falta de comunicación, los canales inadecuados, las prioridades equivocadas, la duplicidad de la información o los tiempos incorrectos. Este último parece un buen punto de partida: «Cuando la hora importa»"
