--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 2023-05-22 19:50
+  text: "Momento de lectura..."
+  link: https://amzn.to/3MPq0wG
+  cat: 'status'
+
 - timestamp: 2023-05-22 07:45
   text: "☔️ Feliz lunes pasado por agua"
   link: http://www.ebenimeli.org/pages/log.html
