Log: serie Periodistas

--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 2023-05-22 21:01
+  text: "¿Recordáis la serie «Periodistas»? Pues las 9 temporadas están disponibles en Prime Video. Por la sexta voy."
+  link: https://www.primevideo.com/detail/Periodistas/0M6ZQZC968OM6IO6FMCH79SEN9
+  cat: 'status'
+
 - timestamp: 2023-05-22 19:33
   text: "Momento de lectura..."
   link: https://amzn.to/3MPq0wG
