--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,5 +1,5 @@
 - timestamp: 2023-05-22 21:01
-  text: "¿Recordáis la serie «Periodistas»? Pues las 9 temporadas están disponibles en Prime Video. Por la sexta voy."
+  text: "¿Recordáis la serie «Periodistas»? Pues las 9 temporadas están disponibles en Prime Video."
   link: https://www.primevideo.com/detail/Periodistas/0M6ZQZC968OM6IO6FMCH79SEN9
   cat: 'status'
 
