--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 2023-05-22 21:51
+  text: "Por cierto, Notion está disponible en español desde hace casi un mes."
+  link: https://twitter.com/notionhq/status/1651558523359338496?s=46
+  cat: 'status'
+
 - timestamp: 2023-05-22 21:01
   text: "¿Recordáis la serie «Periodistas»? Pues las 9 temporadas están disponibles en Prime Video."
   link: https://www.primevideo.com/detail/Periodistas/0M6ZQZC968OM6IO6FMCH79SEN9
