Status updated: Atapuerca

--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 2023-05-22 22:26
+  text: "Leyendo el capítulo sobre Atapuerca del libro «España y su herencia invisible». José Carlos Gracia recuerda su visita al yacimiento que tuvo oportunidad de grabar para su podcast."
+  link: https://memoriasdeuntambor.com/atapuerca-la-montana-magica
+  cat: 'status'
+
 - timestamp: 2023-05-22 21:51
   text: "Por cierto, Notion está disponible en español desde hace casi un mes."
   link: https://twitter.com/notionhq/status/1651558523359338496?s=46
