--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,6 +1,6 @@
 - timestamp: 2023-05-23 07:20
   text: "Algunos centros de la Comunidad Valenciana cancelan su actividad docente."
-  link: https://twitter.com/gvaeducacio/status/1660750103945117696?s=46
+  link: https://twitter.com/gvaeducacio/status/1660750103945117696
   cat: 'urgent'
 
 - timestamp: 2023-05-22 22:26
