--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 2023-05-24 07:00
+  text: "Regla n.º 1: «Una cosa detrás de otra»"
+  link: https://twitter.com/ValaAfshar/status/1661151603876073481
+  cat: 'status'
+
 - timestamp: 2023-05-23 07:20
   text: "Algunos centros de la Comunidad Valenciana cancelan su actividad docente."
   link: https://twitter.com/gvaeducacio/status/1660750103945117696
