--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 2023-05-24 19:05
+  text: "Revisión GTD diaria completada"
+  link: https://www.ochoenpunto.com/10-beneficios-gtd-no-iniciados-metodo/
+  cat: 'status'
+
 - timestamp: 2023-05-24 05:39
   text: "Regla n.º 1: «Una cosa detrás de otra»"
   link: https://twitter.com/ValaAfshar/status/1661151603876073481
