--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 2023-05-24 21:59
+  text: "Leyendo «España y su herencia invisible» de José Carlos Gracia. Cuarta parte: «Somos herederos»"
+  link: https://www.ebenimeli.org/pages/bookshelf.html
+  cat: 'status'
+
 - timestamp: 2023-05-24 19:05
   text: "Revisión GTD diaria completada"
   link: https://www.ochoenpunto.com/10-beneficios-gtd-no-iniciados-metodo/
