--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 2023-05-28 12:17
+  text: "Muere Antonio Gala"
+  link: https://www.elmundo.es/cultura/literatura/2023/05/28/64732a2321efa0d8108b4571.html
+  cat: 'urgent'
+
 - timestamp: 2023-05-24 21:59
   text: "Leyendo «España y su herencia invisible» de José Carlos Gracia. Cuarta parte: «Somos herederos»"
   link: https://www.ebenimeli.org/pages/bookshelf.html
