--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 2023-05-28 13:55
+  text: "Según la ley electoral, el sobre se entrega al Presidente, que es quien lo deposita. En anteriores elecciones recuerdo haberlo introducido yo. Hoy, no nos han dejado. Pero en otras mesas, se permite."
+  link: https://twitter.com/enriquebenimeli/status/1662751987966853121
+  cat: 'status'
+
 - timestamp: 2023-05-28 12:17
   text: "Muere Antonio Gala"
   link: https://www.elmundo.es/cultura/literatura/2023/05/28/64732a2321efa0d8108b4571.html
