--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 2023-05-29 07:50
+  text: "Vamos con el lunes. ¡Y a por una semana productiva!"
+  link: https://www.ebenimeli.org/
+  cat: 'status'
+
 - timestamp: 2023-05-28 13:55
   text: "Según la ley electoral, el sobre se entrega al Presidente, que es quien lo deposita. En anteriores elecciones recuerdo haberlo introducido yo. Hoy, no nos han dejado. Pero en otras mesas, se permite."
   link: https://twitter.com/enriquebenimeli/status/1662751987966853121
