--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 2023-05-29 11:25
+  text: "Pedro Sánchez adelanta las elecciones generales al 23 de julio."
+  link: https://www.abc.es/espana/pedro-sanchez-adelanta-elecciones-generales-julio-20230529112125-nt.html
+  cat: 'urgent'
+
 - timestamp: 2023-05-29 07:50
   text: "Vamos con el lunes. ¡Y a por una semana productiva!"
   link: https://www.ebenimeli.org/
