--- a/_data/books.yml
+++ b/_data/books.yml
@@ -3,9 +3,9 @@
   link: https://amzn.to/3Bvng17
   image:
   description:
-  genre: [ensayo]
+  genre: [historia]
   completed: 
-  onpage: 146
+  onpage: 163
   pages: 256
   synopsis: "Una narración sencilla y natural de los acontecimientos de la Historia de España, buscando una relación entre nuestros orígenes y lo que hoy somos individualmente y como comunidad.  Un trayecto a través de etapas vitales de nuestra historia, persiguiendo siempre una conexión con la actualidad. Desde los primeros homínidos, pasando por los marineros que descubrieron el Nuevo Mundo, hasta llegar a nuestros días, hemos recibido una herencia intangible que debemos hacer llegar a las futuras generaciones. 
   José Carlos Gracia es el creador y director del podcast de historia de España “Memorias de un Tambor”. A lo largo de su trayectoria, en su empeño por difundir la historia y las humanidades, ha sido merecedor de varios premios y nominaciones de prestigio, como el premio Bitácoras al Mejor Podcast Nacional y el Premio de la Asociación de Escuchas de Podcasting (ASESPOD). Está avalado por decenas de miles de seguidores, y varios de sus audios han logrado más de 500.000 descargas, lo que le convierte en un referente del podcasting nacional."
