--- a/_data/log.yml
+++ b/_data/log.yml
@@ -1,3 +1,8 @@
+- timestamp: 2023-07-05 18:52
+  text: "Cuenta atrás..."
+  link: https://www.ebenimeli.org/pages/log.html
+  cat: 'status'
+
 - timestamp: 2023-06-10 08:00
   text: "Intenso fin de semana me espera :)"
   link: https://www.ebenimeli.org/pages/log.html
